<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="eighth_button">নামাজের ভিতরের দোয়া</string>
    <string name="nineth_button">জানাযা নামাজের দোয়া</string>
    <string name="tenth_button">দৈনন্দীন দোয়া</string>
    <string name="ayatul_kursi_button">আয়াতুল কুরসী</string>
    <string name="first_button"><b>সুরা-ফাতিহা</b>\nআয়াত-৭,মাক্কী</string>
    <string name="second_button"><b>সুরা-নাস</b>\nআয়াত-৬,মাক্কী</string>
    <string name="third_button"><b>সুরা-ফালাক</b>\nআয়াত-৫,মাক্কী</string>
    <string name="fourth_button"><b>সুরা-ইখলাস</b>\nআয়াত-৪,মাক্কী</string>
    <string name="fifth_button"><b>সুরা-লাহাব</b>\nআয়াত-৫,মাক্কী</string>
    <string name="sisth_button"><b>সুরা-নাসর</b>\nআয়াত-৩,মাদানী</string>
    <string name="seven_button"><b>সুরা-কাফিরূন</b>\nআয়াত-৬,মাক্কী</string>
    <string name="eight_button"><b>সুরা-কাউসার</b>\nআয়াত-৩,মাক্কী</string>
    <string name="nine_button"><b>সুরা-মাউন</b>\nআয়াত-৭,মাক্কী</string>
    <string name="ten_button"><b>সুরা-কুরাইশ</b>\nআয়াত-৪,মাক্কী</string>
    <string name="eleven_button"><b>সুরা-ফীল</b>\nআয়াত-৫,মাক্কী</string>
    <string name="twelve_button"><b>সুরা-হূমাযাহ</b>\nআয়াত-৯,মাক্কী</string>
    <string name="thirteen_button"><b>সুরা-আসর</b>\nআয়াত-৩,মাক্কী</string>
    <string name="fourteen_button"><b>সুরা-তাকাসুর</b>\nআয়াত-৮,মাক্কী</string>
    <string name="fifteen_button"><b>সুরা-ক্বারিআহ</b>\nআয়াত-১১,মাক্কী</string>
    <string name="sixteen_button"><b>সুরা-আদিয়াত</b>\nআয়াত-১১,মাক্কী</string>
    <string name="seventeen_button"><b>সুরা-যিলযাল</b>\nআয়াত-৮,মাক্কী</string>
    <string name="eightteen_button"><b>সুরা-বাইয়্যিনাহ</b>\nআয়াত-৮,মাক্কী</string>
    <string name="nineteen_button"><b>সুরা-ক্বাদর</b>\nআয়াত-৫,মাক্কী</string>
    <string name="twenty_button"><b>সুরা-আলাক্ব</b>\nআয়াত-১৯,মাক্কী</string>
    <string name="twenty_one_button"><b>সুরা-ত্বীন</b>\nআয়াত-৮,মাক্কী</string>
    <string name="twenty_two_button"><b>সুরা-ইনশিরাহ</b>\nআয়াত-৮,মাক্কী</string>
    <string name="twenty_three_button"><b>সুরা-দুহা</b>\nআয়াত-১১,মাক্কী</string>
    <string name="twenty_four_button"><b>সুরা-লাইল</b>\nআয়াত-২১,মাক্কী</string>
    <string name="twenty_five_button"><b>সুরা-শামস</b>\nআয়াত-১৫,মাক্কী</string>
    <string name="quran_page_header1"> اِقۡرَاۡ بِاسۡمِ رَبِّکَ الَّذِیۡ خَلَقَ</string>
    <string name="quran_page_header2">পড় তোমার প্রভুর নামে যিনি তোমাকে সৃষ্টি করেছেন।</string>
    <string name="hadis_page_header1"> بَلِّغُوا عَنِّي وَلَوْ آيَةً </string>
    <string name="hadis_page_header2">আমার পক্ষ হইতে একটি বাণী হলেও পৌছায় দাও।</string>
    <string name="AlertDialog_Message">আপনি কি এই অ্যাপ থেকে বের হতে চাচ্ছেন?</string>
    <string name="sura_fatiha_title"><b>সুরা ফাতিহা</b>\nঅর্থ-সূচনা</string>
    <string name="sura_fatiha"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_fatiha_ayat_1">ٱلْحَمْدُ لِلَّهِ رَبِّ ٱلْعَٰلَمِينَ ١</string>
    <string name="sura_fatiha_ortho_1">সকল প্রশংসা আল্লাহর,যিনি জগৎ সমূহের প্রতিপালক।</string>
    <string name="sura_fatiha_ayat_2">ٱلرَّحْمَٰنِ ٱلرَّحِيمِ  ٢</string>
    <string name="sura_fatiha_ortho_2">যিনি পরম করুণাময় অতি দয়ালু।</string>
    <string name="sura_fatiha_ayat_3">مَٰلِكِ يَوْمِ ٱلدِّينِ  ٣</string>
    <string name="sura_fatiha_ortho_3">যিনি কেয়ামত দিবসের মালিক।</string>
    <string name="sura_fatiha_ayat_4">إِيَّاكَ نَعْبُدُ وَإِيَّاكَ نَسْتَعِينُ  ٤</string>
    <string name="sura_fatiha_ortho_4">আমরা তোমারই এবাদত করি, এবং তোমারই কাছে সাহায্য প্রার্থনা করি।</string>
    <string name="sura_fatiha_ayat_5">ٱهْدِنَا ٱلصِّرَٰطَ ٱلْمُسْتَقِيمَ  ٥</string>
    <string name="sura_fatiha_ortho_5">আমাদের তুমি সহজ-সঠিক পথে পরিচালিত করো।</string>
    <string name="sura_fatiha_ayat_6">صِرَٰطَ ٱلَّذِينَ أَنْعَمْتَ عَلَيْهِمْ  ٦</string>
    <string name="sura_fatiha_ortho_6">তাদের পথে যাদের প্রতি তুমি নিয়ামত অর্পণ করেছ, তাদের ব্যতীত যাদের প্রতি গযব এসেছে, এবং তাদেরও নয় যারা পথভ্রষ্ট।</string>
    <string name="sura_fatiha_ayat_7">غَيْرِ ٱلْمَغْضُوبِ عَلَيْهِمْ وَلَا ٱلضَّآلِّينَ  ٧</string>
    <string name="sura_fatiha_ortho_7">তাদের ব্যতীত যাদের প্রতি গযব এসেছে, এবং তাদেরও নয় যারা পথভ্রষ্ট।</string>
    <string name="sura_nas_title"><b>সুরা নাস</b>\nঅর্থ-মানবজাতী</string>
    <string name="sura_nas"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_nas_ayat_1">قُلۡ أَعُوذُ بِرَبِّ ٱلنَّاسِ ١</string>
    <string name="sura_nas_ortho_1">বলুন, আমি আশ্রয় গ্রহণ করছি মানুষের পালনকর্তার।</string>
    <string name="sura_nas_ayat_2">مَلِكِ ٱلنَّاسِ ٢</string>
    <string name="sura_nas_ortho_2">মানুষের অধিপতির,</string>
    <string name="sura_nas_ayat_3">إِلَـٰهِ ٱلنَّاسِ ٣</string>
    <string name="sura_nas_ortho_3">মানুষের মাবুদের,</string>
    <string name="sura_nas_ayat_4">مِن شَرِّ الْوَسْوَاسِ الْخَنَّاسِ  ٤</string>
    <string name="sura_nas_ortho_4">তার অনিষ্ট থেকে, যে কুমন্ত্রণা দেয় ও আত্মগোপন করে,</string>
    <string name="sura_nas_ayat_5">الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ  ٥</string>
    <string name="sura_nas_ortho_5">যে কুমন্ত্রণা দেয় মানুষের অন্তরে,</string>
    <string name="sura_nas_ayat_6">مِنَ الْجِنَّةِ وَ النَّاسِ  ٦</string>
    <string name="sura_nas_ortho_6">জ্বিনের মধ্য থেকে অথবা মানুষের মধ্য থেকে।</string>
    <string name="sura_falak_title"><b>সুরা ফালাক</b>\nঅর্থ-নিশিভোর</string>
    <string name="sura_falak"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_falak_ayat_1">قُلۡ أَعُوذُ بِرَبِّ ٱلۡفَلَقِ  ١</string>
    <string name="sura_falak_ortho_1">বলুন, আমি আশ্রয় গ্রহণ করছি প্রভাতের পালনকর্তার,</string>
    <string name="sura_falak_ayat_2">مِن شَرِّ مَا خَلَقَ  ٢</string>
    <string name="sura_falak_ortho_2">তিনি যা সৃষ্টি করেছেন, তার অনিষ্ট থেকে,</string>
    <string name="sura_falak_ayat_3">وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَ  ٣</string>
    <string name="sura_falak_ortho_3">অন্ধকার রাত্রির অনিষ্ট থেকে, যখন তা আচ্ছন্ন হয়,</string>
    <string name="sura_falak_ayat_4">وَمِن شَرِّ ٱلنَّفَّـٰثَـٰتِ فِى ٱلۡعُقَدِ  ٤</string>
    <string name="sura_falak_ortho_4">(জাদু করার উদ্দেশ্যে) গিরায় ফুঁৎকার কারিণীদের অনিষ্ট থেকে,</string>
    <string name="sura_falak_ayat_5">وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ  ٥</string>
    <string name="sura_falak_ortho_5">এবং হিংসুকের অনিষ্ট থেকে যখন সে হিংসা করে।</string>
    <string name="sura_ikhlach_title"><b>সুরা ইখলাছ</b>\nঅর্থ-একত্ব</string>
    <string name="sura_ikhlach"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_ikhlach_ayat_1">قُلْ هُوَ ٱللَّهُ أَحَدٌ  ١</string>
    <string name="sura_ikhlach_ortho_1">বলুন, তিনি আল্লাহ, এক,</string>
    <string name="sura_ikhlach_ayat_2">ٱللَّهُ ٱلصَّمَدُ  ٢</string>
    <string name="sura_ikhlach_ortho_2">আল্লাহ কোনো কিছুর মুখাপেক্ষী নন,সবই তার মুখাপেক্ষী,</string>
    <string name="sura_ikhlach_ayat_3">لَمْ يَلِدْ وَلَمْ يُولَدْ  ٣</string>
    <string name="sura_ikhlach_ortho_3">তিনি কাউকে জন্ম দেননি এবং তাকেও কেউ জন্ম দেয়নি</string>
    <string name="sura_ikhlach_ayat_4">وَلَمْ يَكُن لَّهُۥ كُفُوًا أَحَدٌۢ  ٤</string>
    <string name="sura_ikhlach_ortho_4">এবং তার সমতুল্য কেউ নেই।</string>
    <string name="sura_lahab_title"><b>সুরা লাহাব</b>\nঅর্থ-অগ্নিশিখা</string>
    <string name="sura_lahab"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_lahab_ayat_1">تَبَّتْ يَدَآ أَبِى لَهَبٍ وَتَبَّ  ١</string>
    <string name="sura_lahab_ortho_1">ধ্বংস হোক আবু লাহাবের দুই হাত এবং ধ্বংস হোক সে নিজেও,</string>
    <string name="sura_lahab_ayat_2">تمَآ أَغْنَىٰ عَنْهُ مَالُهُۥ وَمَا كَسَبَ  ٢</string>
    <string name="sura_lahab_ortho_2">কোন কাজে আসেনি তার ধন-সম্পদ ও যা সে উপার্জন করেছে।</string>
    <string name="sura_lahab_ayat_3">سَيَصْلَىٰ نَارًا ذَاتَ لَهَبٍ  ٣</string>
    <string name="sura_lahab_ortho_3">শিগগিরই সে প্রবেশ করবে লেলিহান অগ্নিতে</string>
    <string name="sura_lahab_ayat_4">وَٱمْرَأَتُهُۥ حَمَّالَةَ ٱلْحَطَبِ  ٤</string>
    <string name="sura_lahab_ortho_4">এবং তার স্ত্রীও-যে কাঠ বহন করে,</string>
    <string name="sura_lahab_ayat_5">فِى جِيدِهَا حَبْلٌ مِّن مَّسَدٍۭ  ٥</string>
    <string name="sura_lahab_ortho_5">আর (জাহান্নামে) তার গলায় শক্ত পাকানো রশি বাঁধা থাকবে।</string>
    <string name="sura_nasor_title"><b>সুরা নাসর</b>\nঅর্থ-সাহায্য</string>
    <string name="sura_nasor"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_nasor_ayat_1">إِذَا جَآءَ نَصْرُ ٱللَّهِ وَٱلْفَتْحُ  ١</string>
    <string name="sura_nasor_ortho_1">যখন আসবে আল্লাহর সাহায্য ও বিজয়,</string>
    <string name="sura_nasor_ayat_2">وَرَأَيْتَ ٱلنَّاسَ يَدْخُلُونَ فِى دِينِ ٱللَّهِ أَفْوَاجًا  ٢</string>
    <string name="sura_nasor_ortho_2">এবং আপনি মানুষকে দলে দলে আল্লাহর দ্বীনে প্রবেশ করতে দেখবেন,</string>
    <string name="sura_nasor_ayat_3">فَسَبِّحْ بِحَمْدِ رَبِّكَ وَٱسْتَغْفِرْهُ إِنَّهُۥ كَانَ تَوَّابًۢا  ٣</string>
    <string name="sura_nasor_ortho_3">তখন আপনি আপনার পালনকর্তার পবিত্রতা বর্ণনা করুন এবং তাঁর কাছে ক্ষমা প্রার্থনা করুন। নিশ্চয় তিনি ক্ষমাকারী (এবং তওবা কবুলকারী)।</string>
    <string name="sura_kafirun_title"><b>সুরা কাফিরুন</b>\nঅর্থ-অবিশ্বাসী গোষ্ঠী</string>
    <string name="sura_kafirun"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_kafirun_1"><b>قُلْ يَٰٓأَيُّهَا ٱلْكَٰفِرُونَ  ١</b>\n\nবলুন, হে কাফেররা,</string>
    <string name="sura_kafirun_2"><b>لَآ أَعْبُدُ مَا تَعْبُدُونَ  ٢</b>\n\nতোমরা যার এবাদত কর,আমি তার এবাদত করি না,</string>
    <string name="sura_kafirun_3"><b>وَلَآ أَنتُمْ عَٰبِدُونَ مَآ أَعْبُدُ  ٣</b>\n\nএবং আমি যার এবাদত করি তোমরা তার এবাদত কারী নও,</string>
    <string name="sura_kafirun_4"><b>وَلَآ أَنَا۠ عَابِدٌ مَّا عَبَدتُّمْ  ٤</b>\n\nআর আমি তার এবাদতকারী নই, যার এবাদত তোমরা করে থাক,</string>
    <string name="sura_kafirun_5"><b>وَلَآ أَنتُمْ عَٰبِدُونَ مَآ أَعْبُدُ  ٥</b>\n\nএবং আমি যার এবাদত করি তোমরা তার এবাদত কারী নও,</string>
    <string name="sura_kafirun_6"><b>لَكُمْ دِينُكُمْ وَلِىَ دِينِ  ٦</b>\n\nতোমাদের কর্ম ও কর্মফল তোমাদের জন্যে এবং আমার কর্ম ও কর্মফল আমার জন্যে।</string>
    <string name="sura_kausar_title"><b>সুরা কাওসার</b>\nঅর্থ-প্রাচুর্য</string>
    <string name="sura_kausar"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_kausar_1"><b>إِنَّآ أَعْطَيْنَٰكَ ٱلْكَوْثَرَ  ١</b>\n\nনিশ্চয় আমি আপনাকে কাওসার দান করেছি।</string>
    <string name="sura_kausar_2"><b>ٓفَصَلِّ لِرَبِّكَ وَٱنْحَرْ  ٢</b>\n\nঅতএব আপনার পালনকর্তার উদ্দেশ্যে নামায পড়ুন এবং কোরবানী করুন,</string>
    <string name="sura_kausar_3"><b>ٓإِنَّ شَانِئَكَ هُوَ ٱلْأَبْتَرُ  ٣</b>\n\nআপনার প্রতি বিদ্বেষ পোষণকারীই লেজকাটা (নির্বংশ)।</string>
    <string name="sura_maun_title"><b>সুরা মাউন</b>\nঅর্থ-সাহায্য-সহায়তা</string>
    <string name="sura_maun"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_maun_1"><b>أَرَءَيْتَ ٱلَّذِى يُكَذِّبُ بِٱلدِّينِ  ١</b>\n\nআপনি কি দেখেছেন তাকে, যে বিচারদিবসকে মিথ্যা বলে?</string>
    <string name="sura_maun_2"><b>فَذَٰلِكَ ٱلَّذِى يَدُعُّ ٱلْيَتِيمَ  	٢</b>\n\nসে তো সেই ব্যক্তি, যে এতীমকে গলা ধাক্কা দেয়</string>
    <string name="sura_maun_3"><b>وَلَا يَحُضُّ عَلَىٰ طَعَامِ ٱلْمِسْكِينَِ  ٣</b>\n\nএবং মিসকীনকে অন্ন দিতে উৎসাহিত করে না।</string>
    <string name="sura_maun_4"><b>فَوَيْلٌ لِّلْمُصَلِّينََ  	٤</b>\n\nঅতএব দুর্ভোগ সেসব নামাযীদের জন্য,</string>
    <string name="sura_maun_5"><b>ٱلَّذِينَ هُمْ عَن صَلَاتِهِمْ سَاهُونَ  ٥</b>\n\nযারা তাদের নামায সম্বন্ধে উদাসীন;</string>
    <string name="sura_maun_6"><b>ٱلَّذِينَ هُمْ يُرَآءُونَ  ٦</b>\n\nযারা তা লোক-দেখানোর জন্য করে থাকে,</string>
    <string name="sura_maun_7"><b>وَيَمْنَعُونَ ٱلْمَاعُونَ  ٧</b>\n\nএবং নিত্য প্রয়োজনীয় ব্যবহার্য্য বস্তু অন্যকে দেয় না।</string>
    <string name="sura_kuraish_title"><b>সুরা কুরাইশ</b>\nঅর্থ-কুরাইশ গোত্র</string>
    <string name="sura_kuraish"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_kuraish_1"><b>لِإِيلَٰفِ قُرَيْشٍ  ١</b>\n\nকুরাইশদের অভ্যস্ত করার কারণে,</string>
</resources>