<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="#F1D9D9"
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quran_page_header1"
                android:gravity="center"
                android:textSize="30sp"
                android:fontFamily="@font/scheherazaderegot"
                android:textStyle="bold"
                />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quran_page_header2"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="@font/kalpurush"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:fontFamily="@font/kalpurush"
                android:id="@+id/namajer_doaId"
                android:textSize="23dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eighth_button"
                android:background="@drawable/round_button"
                />

            <Button
                android:fontFamily="@font/kalpurush"
                android:id="@+id/daily_doaId"
                android:textSize="23dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tenth_button"
                android:background="@drawable/round_button"
                />
            <Button
                android:fontFamily="@font/kalpurush"
                android:id="@+id/janaja_namajer_doaId"
                android:textSize="23dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nineth_button"
                android:background="@drawable/round_button"
                />
            <Button
                android:fontFamily="@font/kalpurush"
                android:id="@+id/ayatul_kursi_Id"
                android:textSize="23dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ayatul_kursi_button"
                android:background="@drawable/round_button"
                />
            <Button
                android:id="@+id/daily_doaId4"
                android:textSize="23dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nineth_button"
                android:background="@drawable/round_button"
                />
            <Button
                android:id="@+id/daily_doaId5"
                android:textSize="23dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nineth_button"
                android:background="@drawable/round_button"
                />
            <Button
                android:id="@+id/daily_doaId6"
                android:textSize="23dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nineth_button"
                android:background="@drawable/round_button"
                />
            <Button
                android:id="@+id/daily_doaId7"
                android:textSize="23dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nineth_button"
                android:background="@drawable/round_button"
                />
            <Button
                android:id="@+id/daily_doaId8"
                android:textSize="23dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nineth_button"
                android:background="@drawable/round_button"
                />
            <Button
                android:id="@+id/daily_doaId9"
                android:textSize="20dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nineth_button"
                android:background="@drawable/round_button"
                />
            <Button
                android:id="@+id/daily_doaId10"
                android:textSize="20dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nineth_button"
                android:background="@drawable/round_button"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>